Improve event date format

--- a/web/themes/ipu/templates/field/field--default--field-ipu-event-dates--ipu-event.html.twig
+++ b/web/themes/ipu/templates/field/field--default--field-ipu-event-dates--ipu-event.html.twig
@@ -66,15 +66,14 @@
   {% else %}
     {% for item in items %}
       <div{{ attributes.addClass(classes) }}>
-        {{  item.content }}
         {% if item.content.end_date.value is same as (null) %}
           {% set date_value = item.content.start_date['#value'] %}
         {% else %}
           {% set date_value = item.content.end_date['#value'] %}
         {% endif %}
-        <span class="event-dates-part event-dates-month">{{ date_value|date(format='M') }}</span>
-        <span class="event-dates-part event-dates-day">{{ date_value|date(format='d') }}</span>
-        <span class="event-dates-part event-dates-year">{{ date_value|date(format='Y') }}</span>
+        <span class="event-dates-part event-dates-month">{{  item.content.start_date['#value']|date(format='M') }}</span>
+        <span class="event-dates-part event-dates-day">{{  item.content.start_date['#value']|date(format='d') }}</span>
+        <span class="event-dates-part event-dates-year">{{  item.content.start_date['#value']|date(format='Y') }}</span>
       </div>
     {% endfor %}
   {% endif %}
