--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -1229,3 +1229,32 @@ a.btn {
     @extend .col-md-4;
   }
 }
+
+.field-committee-members {
+  .field__label {
+    @extend h2;
+    border-bottom: 2px solid $secondary;
+    padding-bottom: 4px;
+    &.font-weight-bold {
+      font-weight: $font-weight-light !important;
+    }
+
+  }
+  .field__items {
+    @extend .row;
+    .field__item {
+      @extend .col-md-4;
+      .paragraph--type--member {
+        padding: 10px;
+        background-color: $light;
+        .node--type-committee-member.node--view-mode-teaser {
+          .committee-member__node-title h3 {
+            font-size: $font-size-base;
+            margin: 4px 0;
+            font-weight: $font-weight-normal;
+          }
+        }
+      }
+    }
+  }
+}
