Add new country lookup field to committee members, remove default paras, so empty paragraph is not added to pages. Group old commmittee member fields on back- and front-end.

--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -1238,11 +1238,10 @@ a.btn {
     &.font-weight-bold {
       font-weight: $font-weight-light !important;
     }
-
   }
   .field__items {
     @extend .row;
-    .field__item {
+    & > .field__item {
       @extend .col-md-4;
       .paragraph--type--member {
         padding: 10px;
