--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -760,6 +760,17 @@ a.btn {
   }
 
 }
+
+.node--type-article.node--view-mode-full {
+  .row {
+    margin-bottom: 40px;
+    .article__node-post-date {
+      background-color: $light;
+      padding: 4px 10px;
+    }
+  }
+}
+
 .viewfield--view__articles {
   h3 {
     font-size: $font-size-base;
@@ -887,7 +898,7 @@ a.btn {
       margin-bottom: 0;
     }
   }
-  .article__body {
+  XXX.article__body {
     margin: 30px 0;
   }
 
