--- a/web/themes/ipu/templates/layouts/bs-1col.html.twig
+++ b/web/themes/ipu/templates/layouts/bs-1col.html.twig
@@ -15,21 +15,11 @@
  * - attributes: The HTML attributes to use on the wrapper for this region.
  * - content: The content to go inside the wrapper for this region.
 
- MAKE THE IMAGE A BACKGROUND
-
-
-{% if node.field_media_image.entity is defined %}
-   {% if node.field_media_image.entity.uri.value is not null %}
-        {% set url = 'url(' ~ node.field_media_image.entity.uri.value|image_style('teaser') ~ ')' %}
-       {% endif %}
-{% endif %}
-
- */
 #}
-{% set url = 'none' %}
+
 <{{ wrapper }}{{ attributes }}>
 {{ title_suffix.contextual_links }}
-<{{ main.wrapper }}{{ main.attributes.setAttribute('style', 'background-image: ' ~ url) }}>
+<{{ main.wrapper }}{{ main.attributes }}>
 {{ main.content }}
 </{{ main.wrapper }}>
 </{{ wrapper }}>
