--- a/web/modules/custom/ipu_map/css/ipu_map.css
+++ b/web/modules/custom/ipu_map/css/ipu_map.css
@@ -47,15 +47,21 @@
 .mapael .mapTooltip {
     position: absolute;
     background-color: #fff;
-    moz-opacity: 0.70;
-    opacity: 0.70;
-    filter: alpha(opacity=70);
+    moz-opacity: 0.90;
+    opacity: 0.90;
+    filter: alpha(opacity=90);
     border-radius: 2px;
-    padding: 10px;
+    padding: 6px;
     z-index: 1000;
-    max-width: 200px;
+    max-width: 300px;
     display: none;
     color: #343434;
+}
+.mapael .mapTooltip .country-name {
+    font-weight: bold;
+}
+.mapael .mapTooltip .text {
+    font-size: 0.85rem;
 }
 
 .ipu-map-parline-data {
