--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -1335,3 +1335,40 @@ a.btn {
     }
   }
 }
+
+//Countries and maps
+
+.mapael .mapTooltip {
+  border: 1px solid $primary;
+  box-shadow: color("ipu-light-grey");
+}
+
+.viewfield--view__countries__block_1 {
+  h3 {
+    clear: left;
+    float: left;
+    width: 40px;
+    padding: 2px 10px;
+    text-align: center;
+  }
+  .item-list {
+    width: 100%;
+    padding-bottom: 4px;
+    border-bottom: 1px solid $ipu-light-grey;
+    margin-bottom: 4px;
+  }
+  ul {
+    float: left;
+    list-style: none;
+    width: calc(100% - 50px);
+    padding: 0;
+    margin: 0;
+    li {
+      list-style: none;
+      display: inline-block;
+      a.non-member {
+        font-weight: $font-weight-light;
+      }
+    }
+  }
+}
