--- a/web/themes/ipu/src/sass/_ipu-variables.scss
+++ b/web/themes/ipu/src/sass/_ipu-variables.scss
@@ -75,6 +75,9 @@ $secondary: $ipu-teal;
 $tertiary:  $ipu-orange;
 $dark:      $ipu-grey;
 
+.btn-sm {
+  padding: 0.1rem 0.5rem;
+}
 $input-btn-padding-y: 0.125rem !default;
 $input-btn-padding-x: 0.125rem !default;
 
