--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -675,6 +675,7 @@ a.btn {
     background-position: 100% 50%;
     background-size: 36px;
     line-height: 1.1em;
+    z-index: 2;
     // time {
     //   display: flex;
     //   height: 100%;
