Add new Event session type vocabulary, added as a field to event session paragraph. Smarter processing of event dates output on templates (to show only month/year or only year)

--- a/web/themes/ipu/templates/field/field--default--field-event-computed-date--ipu-event.html.twig
+++ b/web/themes/ipu/templates/field/field--default--field-event-computed-date--ipu-event.html.twig
@@ -69,9 +69,18 @@
 
         {% set date_value = item.content['#markup'] %}
         {% set date_value = date_value|date('U') %}
-        <span class="event-dates-part event-dates-month">{{  date_value|format_date('custom','M') }}</span>
-        <span class="event-dates-part event-dates-day">{{   date_value|format_date('custom','d') }}</span>
+
+        {% set accuracy = element['#object'].field_date_accuracy.value  %}
+        {% if accuracy == 'year' %}
         <span class="event-dates-part event-dates-year">{{   date_value|format_date('custom','Y') }}</span>
+        {% elseif accuracy == 'month' %}
+          <span class="event-dates-part event-dates-month">{{  date_value|format_date('custom','M') }}</span>
+          <span class="event-dates-part event-dates-year">{{   date_value|format_date('custom','Y') }}</span>
+        {% else %}
+          <span class="event-dates-part event-dates-month">{{  date_value|format_date('custom','M') }}</span>
+          <span class="event-dates-part event-dates-day">{{   date_value|format_date('custom','d') }}</span>
+          <span class="event-dates-part event-dates-year">{{   date_value|format_date('custom','Y') }}</span>
+          {% endif %}
 
       </div>
     {% endfor %}
