--- a/web/themes/ipu/templates/field/field--default--field-ipu-event-dates--ipu-event.html.twig
+++ b/web/themes/ipu/templates/field/field--default--field-ipu-event-dates--ipu-event.html.twig
@@ -67,10 +67,19 @@
     {% for item in items %}
       <div{{ attributes.addClass(classes) }}>
         {% if item.content.start_date_M is defined %}
-        <span class="event-dates-part event-dates-month">{{ item.content.start_date_M }}</span>
-        <span class="event-dates-part event-dates-day">{{ item.content.start_date_d }}</span>
-        <span class="event-dates-part event-dates-year">{{ item.content.start_date_Y }}</span>
+          {% set accuracy = element['#object'].field_date_accuracy.value  %}
+          {% if accuracy == 'year' %}
+            <span class="event-dates-part event-dates-year">{{ item.content.start_date_Y }}</span>
+          {% elseif accuracy == 'month' %}
+              <span class="event-dates-part event-dates-month">{{ item.content.start_date_M }}</span>
+              <span class="event-dates-part event-dates-year">{{ item.content.start_date_Y }}</span>
           {% else %}
+              <span class="event-dates-part event-dates-month">{{ item.content.start_date_M }}</span>
+              <span class="event-dates-part event-dates-day">{{ item.content.start_date_d }}</span>
+              <span class="event-dates-part event-dates-year">{{ item.content.start_date_Y }}</span>
+          {% endif %}
+
+        {% else %}
             <div class="event-dates-full">{{ item.content }}</div>
         {% endif %}
       </div>
