Remove link on Event titles in listings (highlight and teaser) when flag set.

--- a/web/themes/ipu/assets/css/ipu.style.css
+++ b/web/themes/ipu/assets/css/ipu.style.css
@@ -19853,6 +19853,7 @@ a.more-data-parline, .article__node-link a,
 }
 .group-event-wrapper .event__type-content {
   max-width: calc(100% - 60px);
+  padding-top: 20px;
 }
 .group-event-wrapper .ipu-event__field-location {
   font-size: 0.875rem;
@@ -21525,8 +21526,20 @@ a.more-data-parline, .article__node-link a,
   border-bottom: 1px solid #00a8b4;
   padding-top: 20px;
 }
-.viewfield--view__events.viewfield--view__events__block .ipu-event__node-title h3 a, .viewfield--view__events.viewfield--view__events__block .ipu-event__node-title .basic-page__field-related-content .field__label a, .basic-page__field-related-content .viewfield--view__events.viewfield--view__events__block .ipu-event__node-title .field__label a {
+.viewfield--view__events.viewfield--view__events__block .ipu-event__node-title h3, .viewfield--view__events.viewfield--view__events__block .ipu-event__node-title .basic-page__field-related-content .field__label, .basic-page__field-related-content .viewfield--view__events.viewfield--view__events__block .ipu-event__node-title .field__label,
+.viewfield--view__events.viewfield--view__events__block .ipu-event__node-title h3 a,
+.viewfield--view__events.viewfield--view__events__block .ipu-event__node-title .basic-page__field-related-content .field__label a,
+.basic-page__field-related-content .viewfield--view__events.viewfield--view__events__block .ipu-event__node-title .field__label a {
   font-size: 1.2rem;
+}
+.viewfield--view__events .field-event-type {
+  font-size: 0.6rem;
+  background: #747678;
+  text-transform: uppercase;
+  color: #ffffff;
+  letter-spacing: 0.05rem;
+  padding: 1px 4px;
+  display: inline-block;
 }
 
 .node-basic_page,
